@startuml

title __WELCOMEFRAGMENTS's Class Diagram__\n

  namespace co.siarhei.apps.android.geochat {
    namespace UI {
      namespace WelcomeFragments {
        class co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment1 {
            + RegistWelcomeinfoFragment1()
            {static} + newInstance()
            + onCreate()
            + onCreateView()
            + onDetach()
        }
      }
    }
  }
  

  namespace co.siarhei.apps.android.geochat {
    namespace UI {
      namespace WelcomeFragments {
        interface co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment1.OnFragmentInteractionListener {
            {abstract} + onFragmentInteraction()
        }
      }
    }
  }
  

  namespace co.siarhei.apps.android.geochat {
    namespace UI {
      namespace WelcomeFragments {
        class co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment2 {
            + RegistWelcomeinfoFragment2()
            {static} + newInstance()
            + onAttach()
            + onCreate()
            + onCreateView()
            + onDetach()
        }
      }
    }
  }
  

  namespace co.siarhei.apps.android.geochat {
    namespace UI {
      namespace WelcomeFragments {
        interface co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment2.OnFragmentInteractionListener {
            {abstract} + onFragmentInteraction()
        }
      }
    }
  }
  

  namespace co.siarhei.apps.android.geochat {
    namespace UI {
      namespace WelcomeFragments {
        class co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment3 {
            + RegistWelcomeinfoFragment3()
            {static} + newInstance()
            + onCreate()
            + onCreateView()
        }
      }
    }
  }
  

  namespace co.siarhei.apps.android.geochat {
    namespace UI {
      namespace WelcomeFragments {
        interface co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment3.OnFragmentInteractionListener {
            {abstract} + onFragmentInteraction()
        }
      }
    }
  }
  

  namespace co.siarhei.apps.android.geochat {
    namespace UI {
      namespace WelcomeFragments {
        class co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment4 {
            + RegistWelcomeinfoFragment4()
            {static} + newInstance()
            + onCreate()
            + onCreateView()
        }
      }
    }
  }
  

  namespace co.siarhei.apps.android.geochat {
    namespace UI {
      namespace WelcomeFragments {
        interface co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment4.OnFragmentInteractionListener {
            {abstract} + onFragmentInteraction()
        }
      }
    }
  }
  

  co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment1 -up-|> androidx.fragment.app.Fragment
  co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment1 o-- co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment1.OnFragmentInteractionListener : mListener
  co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment1 +-down- co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment1.OnFragmentInteractionListener
  co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment2 -up-|> androidx.fragment.app.Fragment
  co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment2 o-- co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment2.OnFragmentInteractionListener : mListener
  co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment2 +-down- co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment2.OnFragmentInteractionListener
  co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment3 -up-|> androidx.fragment.app.Fragment
  co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment3 +-down- co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment3.OnFragmentInteractionListener
  co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment4 -up-|> androidx.fragment.app.Fragment
  co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment4 +-down- co.siarhei.apps.android.geochat.UI.WelcomeFragments.RegistWelcomeinfoFragment4.OnFragmentInteractionListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
